# esp32-clock

./: .clangd  .gitignore  .gitmodules  README.md  flake.nix  partition.csv  sdkconfig  sdkconfig.old  sdkconfigs
main/: CMakeLists.txt  background.c  bme680.h  dashboard.c  dashboard.h  idf_component.yml  kitty_gif.c  lcd.c  lcd.h  main.c  msg.h  net_mgr.c  net_mgr.h  sensors_bme680.c  sensors_bme680.h  ui.c  ui.h  wifi.c  wifi.h
